# cmip6-leap-feedstock

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  batch_submission.ipynb  bigquery.py  bigquery_interface.py  catalog_utils.py  config.json  config_local.json  config_old.json  dev_submission_script.ipynb  dev_url_generator_script.ipynb  environment-dataflow-submission-working.locked  environment-local.locked  environment.yml  environment_maintenance.yml  iids.txt  parse-catalog-from-bq.py  proto_ingest_legacy_to_bq.ipynb  proto_retract.ipynb  pyproject.toml  sync_catalogs.py
.github/ISSUE_TEMPLATE/: data_request.yaml  problem.yaml
.github/workflows/: ash.yaml  deploy.yaml  parse_catalog.yaml  recipe_ci.yaml  retraction.yaml  validate-catalog.yaml
configs/: config-pgf-runner-leap-dataflow-pr.json  config-pgf-runner-leap-dataflow.json  config_local.json
feedstock/: bigquery_interface.py  catalog.yaml  first_batch.json  iids copy.yaml  iids.yaml  iids_pr.yaml  meta.yaml  pco2_testbed_request.txt  recipe.py  recipe_input_dict.json  requirements.txt  requirments.txt  tim_batch.json  tim_batch_new_pgf-esgf.json  transforms.py
notebooks/: batch_submission.ipynb
scripts/: catalog_pangeo_legacy_stores.ipynb  dump_bigquery_to_csv.py  move_leap_legacy_stores.ipynb  retraction.py
scripts/legacy/: add_legacy_stores_to_main.ipynb  move_leap_legacy_stores.ipynb
scripts/monitoring/: convert_csv_to_yaml.py  convert_yaml_to_list.py  search_iids_from_file.py
tests/: test_bigquery_interface.py
